--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="baptisms.html">Baptisms</a>
     </nav>
 
-    <img src="images/home_pg_temple.jpg" alt="Madrid Spain Temple"
+    <img src="images/home_pg_temple.jpg" alt="Madrid Spain Temple">
     <p>
         I was serving in Ciudad Real with one of my favorite companions, Elder Hoffman, 
         and we had a crazy experience. As a preface, in Spain missionaries go to bed at 11:30 instead 
