--- a/baptisms.html
+++ b/baptisms.html
@@ -1,1 +1,81 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Baptism Gallery</title>
+  <style>
+    body {
+      font-family: 'Times New Roman', serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      background-color: #0A4D68;
+      color: #F2E8CF;
+    }
+
+    .gallery {
+      width: 90%;
+      max-width: 1400px;
+      margin: 0 auto;
+      padding: 50px 20px;
+      background-color: #F2E8CF;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    }
+
+    .gallery img {
+      width: 80%;
+      max-width: 5000px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      border: 5px solid #D96C2B;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.02);
+      box-shadow: 0 0 20px #5DA9E9;
+    }
+
+    .row {
+      display: flex;
+      justify-content: center;
+      gap: 40px;
+      margin-bottom: 20px;
+      flex-wrap: wrap;
+    }
+
+    .row img {
+      width: 100%;
+      max-width: 45%;
+    }
+
+    .portrait-section {
+      margin-bottom: 200px;
+    }
+  </style>
+</head>
+<body>
+  <div class="gallery">
+    <div class="portrait-section">
+      <img src="images/bap5.jpg" alt="Baptism 5">
+      <img src="images/bap6.jpg" alt="Baptism 6">
+      <img src="images/bap7.jpg" alt="Baptism 7">
+    </div>
+
+    <div class="row">
+      <img src="images/bap1.jpg" alt="Baptism 1">
+      <img src="images/bap2.jpg" alt="Baptism 2">
+    </div>
+
+    <div class="row">
+      <img src="images/bap3.jpg" alt="Baptism 3">
+      <img src="images/bap4.jpg" alt="Baptism 4">
+    </div>
+  </div>
+
+  <footer></footer>
+</body>
+</html>
 
