--- a/baptisms.html
+++ b/baptisms.html
@@ -59,19 +59,19 @@
 <body>
   <div class="gallery">
     <div class="portrait-section">
-      <img src="images/bap5.jpg" alt="Baptism 5">
-      <img src="images/bap6.jpg" alt="Baptism 6">
-      <img src="images/bap7.jpg" alt="Baptism 7">
+      <img src="images/Bap5.jpg" alt="Baptism 5">
+      <img src="images/Bap6.jpg" alt="Baptism 6">
+      <img src="images/Bap7.jpg" alt="Baptism 7">
     </div>
 
     <div class="row">
-      <img src="images/bap1.jpg" alt="Baptism 1">
-      <img src="images/bap2.jpg" alt="Baptism 2">
+      <img src="images/Bap1.jpg" alt="Baptism 1">
+      <img src="images/Bap2.jpg" alt="Baptism 2">
     </div>
 
     <div class="row">
-      <img src="images/bap3.jpg" alt="Baptism 3">
-      <img src="images/bap4.jpg" alt="Baptism 4">
+      <img src="images/Bap3.jpg" alt="Baptism 3">
+      <img src="images/Bap4.jpg" alt="Baptism 4">
     </div>
   </div>
 
