Added header, footer, and sections

--- a/index.html
+++ b/index.html
@@ -6,60 +6,69 @@
     <title>Madrid South Mission</title>
 </head>
 <body>
-    
-    <img src="images/logo.png" alt="Mission Logo">
-    <h1>
-        Memories from Madrid South
-        Jan 2023 - Feb 2025
-    </h1>
 
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="companions.html">Companions</a>
-        <a href="baptisms.html">Baptisms</a>
-    </nav>
+    <header>
+        <img src="images/logo.png" alt="Mission Logo">
+        <h1>Memories from Madrid South<br>Jan 2023 - Feb 2025</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="companions.html">Companions</a>
+            <a href="baptisms.html">Baptisms</a>
+        </nav>
+    </header>
 
-    <img src="images/home_pg_temple.jpg" alt="Madrid Spain Temple">
-    <p>
-        I was serving in Ciudad Real with one of my favorite companions, Elder Hoffman, 
-        and we had a crazy experience. As a preface, in Spain missionaries go to bed at 11:30 instead 
-        of 10:30 like most missions do it. It was about 11:45 and we were both in bed trying to sleep 
-        when we got a really bad feeling. We got up and searched the apartment to find out what could 
-        be wrong. After 15 minutes of thinking and praying for guidance, as clear as day we both felt 
-        the impression to leave immediately. We got our emergency backpacks, left our apartment to go 
-        to the church building and called our district leader. We ended up spending the night in the 
-        chapel and we slept on some chairs we pulled together. The next morning, upon returning to the 
-        apartment, we found damage on the door, right next to the frame where the lock was. Someone had 
-        tried to break in the night before. I don’t know what would have happened had we stayed, but 
-        what I do know is that God knew that would happened and warned us to leave. I know the Spirit 
-        speaks to us to protect us and guide us, and I will never disregard a spiritual impression.
-    </p>
+    <section>
+        <img src="images/home_pg_temple.jpg" alt="Madrid Spain Temple">
+        <p>
+            I was serving in Ciudad Real with one of my favorite companions, Elder Hoffman, 
+            and we had a crazy experience. As a preface, in Spain missionaries go to bed at 11:30 instead 
+            of 10:30 like most missions do it. It was about 11:45 and we were both in bed trying to sleep 
+            when we got a really bad feeling. We got up and searched the apartment to find out what could 
+            be wrong. After 15 minutes of thinking and praying for guidance, as clear as day we both felt 
+            the impression to leave immediately. We got our emergency backpacks, left our apartment to go 
+            to the church building and called our district leader. We ended up spending the night in the 
+            chapel and we slept on some chairs we pulled together. The next morning, upon returning to the 
+            apartment, we found damage on the door, right next to the frame where the lock was. Someone had 
+            tried to break in the night before. I don’t know what would have happened had we stayed, but 
+            what I do know is that God knew that would happened and warned us to leave. I know the Spirit 
+            speaks to us to protect us and guide us, and I will never disregard a spiritual impression.
+        </p>
+    </section>
 
-    <img src="images/plaza.jpg" alt="Madrid Plaza"
-    <p>
-        I spent two transfers of my mission in a coastal city called Alicante. It was a fairly big city 
-        with eight missionaries assigned to the two wards there, and it was a beautiful place. Still to 
-        this day one of my favorite places I’ve visited. In this area came my favorite mission 
-        experience. We received a referral from social media of a man by the name of Jader. He 
-        expressed interest in the gospel, and we reached out to him, to find out that he was deaf. 
-        So we set up an appointment with him and invited some missionaries from Seattle who were 
-        assigned to an ASL speaking mission. Through the process, I started learning ASL to be able 
-        to have basic conversation with him, and it was one of the most special things I’ve ever done. 
-        The gospel completely changed his life. He loves the Book of Mormon, and he loves Jesus Christ. 
-        He would travel from his home to the church, an hour and a half each way three times a week 
-        for sacrament meetings and lessons, and continued to devour the scriptures and learn more about 
-        the doctrines of the kingdom. When the time came, I learned the baptismal prayer in ASL and 
-        baptized him for the remission of sins. He and I have a forever bond, and we always will. Later 
-        on, the stars aligned for me to go with him to his first temple trip, and I baptized him in the 
-        temple for one of his deceased ancestors. The gospel of Jesus Christ is nothing short of a 
-        miracle, and the change it makes in peoples’ is indescribable.
-    </p>
+    <section>
+        <img src="images/plaza.jpg" alt="Madrid Plaza">
+        <p>
+            I spent two transfers of my mission in a coastal city called Alicante. It was a fairly big city 
+            with eight missionaries assigned to the two wards there, and it was a beautiful place. Still to 
+            this day one of my favorite places I’ve visited. In this area came my favorite mission 
+            experience. We received a referral from social media of a man by the name of Jader. He 
+            expressed interest in the gospel, and we reached out to him, to find out that he was deaf. 
+            So we set up an appointment with him and invited some missionaries from Seattle who were 
+            assigned to an ASL speaking mission. Through the process, I started learning ASL to be able 
+            to have basic conversation with him, and it was one of the most special things I’ve ever done. 
+            The gospel completely changed his life. He loves the Book of Mormon, and he loves Jesus Christ. 
+            He would travel from his home to the church, an hour and a half each way three times a week 
+            for sacrament meetings and lessons, and continued to devour the scriptures and learn more about 
+            the doctrines of the kingdom. When the time came, I learned the baptismal prayer in ASL and 
+            baptized him for the remission of sins. He and I have a forever bond, and we always will. Later 
+            on, the stars aligned for me to go with him to his first temple trip, and I baptized him in the 
+            temple for one of his deceased ancestors. The gospel of Jesus Christ is nothing short of a 
+            miracle, and the change it makes in peoples’ is indescribable.
+        </p>
+    </section>
 
-    <h2>Mission Scripture</h2>
-    <p>Alma 26:12
-        Yea, I know that I am nothing; as to my strength I am weak; therefore I will not boast of myself, 
-        but I will boast of my God, for in his strength I can do all things; yea, behold, many mighty 
-        miracles we have wrought in this land, for which we will praise his name forever.
-</p>
+    <section>
+        <h2>Mission Scripture</h2>
+        <p><strong>Alma 26:12</strong><br>
+            Yea, I know that I am nothing; as to my strength I am weak; therefore I will not boast of myself, 
+            but I will boast of my God, for in his strength I can do all things; yea, behold, many mighty 
+            miracles we have wrought in this land, for which we will praise his name forever.
+        </p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Parker Jensen | Madrid South Mission Memories</p>
+    </footer>
+
 </body>
 </html>
