--- a/baptisms.html
+++ b/baptisms.html
@@ -65,8 +65,8 @@
     </div>
 
     <div class="row">
-      <img src="images/Bap1.jpg" alt="Baptism 1">
-      <img src="images/Bap2.jpg" alt="Baptism 2">
+      <img src="images/baptism1.jpg" alt="Baptism 1">
+      <img src="images/baptism2.jpg" alt="Baptism 2">
     </div>
 
     <div class="row">
