--- a/baptisms.html
+++ b/baptisms.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="row">
-      <img src="images/baptism1.jpg" alt="Baptism 1">
+      <img src="images/baptisms1.jpg" alt="Baptism 1">
       <img src="images/baptism2.jpg" alt="Baptism 2">
     </div>
 
