--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 
     <header>
-        <img src="images/logo.png" alt="Mission Logo">
-        <h1>Memories from Madrid South<br>Jan 2023 - Feb 2025</h1>
+        <div class="header-top">
+            <img src="images/logo.png" alt="Mission Logo">
+            <h1>Memories from Madrid South<br>Jan 2023 - Feb 2025</h1>
+        </div>
         <nav>
             <a href="index.html">Home</a>
             <a href="companions.html">Companions</a>
@@ -68,7 +70,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Parker Jensen | Madrid South Mission Memories</p>
+        <p>&copy; 2025 Parker Jensen | Madrid South Mission</p>
     </footer>
 
 </body>
