--- a/baptisms.html
+++ b/baptisms.html
@@ -1,8 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Baptism Gallery</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Madrid South Mission</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <header>
+        <div class="header-top">
+            <img src="images/logo.png" alt="Mission Logo">
+            <h1>Memories from Madrid South<br>Jan 2023 - Feb 2025</h1>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="companions.html">Companions</a>
+            <a href="baptisms.html">Baptisms</a>
+        </nav>
+    </header>
   <style>
     body {
       font-family: 'Times New Roman', serif;
