--- a/baptisms.html
+++ b/baptisms.html
@@ -90,8 +90,10 @@
       <img src="images/Bap4.jpg" alt="Baptism 4">
     </div>
   </div>
+    <footer>
+        <p>&copy; 2025 Parker Jensen | Madrid South Mission</p>
+    </footer>
 
-  <footer></footer>
 </body>
 </html>
 
