--- a/baptisms.html
+++ b/baptisms.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madrid South Mission</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Madrid South Mission</title>
+  <link rel="stylesheet" href="styles.css" />
 
-    <header>
-        <div class="header-top">
-            <img src="images/logo.png" alt="Mission Logo">
-            <h1>Memories from Madrid South<br>Jan 2023 - Feb 2025</h1>
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="companions.html">Companions</a>
-            <a href="baptisms.html">Baptisms</a>
-        </nav>
-    </header>
-    </style>
+  <style>
     body {
       font-family: 'Times New Roman', serif;
       text-align: center;
@@ -70,10 +57,46 @@
     .portrait-section {
       margin-bottom: 200px;
     }
+
+    header {
+      padding: 20px;
+      background-color: #062E3F;
+      color: #F2E8CF;
+    }
+
+    nav a {
+      margin: 0 10px;
+      color: #F2E8CF;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      background-color: #062E3F;
+      color: #F2E8CF;
+    }
   </style>
- 
 </head>
+
 <body>
+  <header>
+    <div class="header-top">
+      <img src="images/logo.png" alt="Mission Logo">
+      <h1>Memories from Madrid South<br>Jan 2023 - Feb 2025</h1>
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="companions.html">Companions</a>
+      <a href="baptisms.html">Baptisms</a>
+    </nav>
+  </header>
+
   <div class="gallery">
     <div class="portrait-section">
       <img src="images/Bap5.jpg" alt="Baptism 5">
@@ -91,10 +114,10 @@
       <img src="images/Bap4.jpg" alt="Baptism 4">
     </div>
   </div>
-    <footer>
-        <p>&copy; 2025 Parker Jensen | Madrid South Mission</p>
-    </footer>
 
+  <footer>
+    <p>&copy; 2025 Parker Jensen | Madrid South Mission</p>
+  </footer>
 </body>
 </html>
 
