--- a/companions.html
+++ b/companions.html
@@ -24,28 +24,28 @@
     </section>
     <section>
         <img src="images/ElderDLarkins.jpg" alt="ElderDLarkins">
-        <img src="images/ElderLWolfington.jpg" alt="ElderLWolfington">
+        <img src="images/ElderLWolfington.jpg" alt="ElderLWolfington" style="transform:rotate(180deg);">
         <img src="images/ElderCBradshaw.jpg" alt="ElderCBradshaw">
     </section>
     <section>
-        <img src="images/ElderKWard.jpg" alt="ElderKWard">
-        <img src="images/ElderMDominguez.jpg" alt="ElderMDominguez">
-        <img src="images/ElderCCleaves.jpg" alt="ElderCCleaves">
+        <img src="images/ElderKWard.jpg" alt="ElderKWard" style="transform:rotate(270deg);">
+        <img src="images/ElderMDominguez.jpg" alt="ElderMDominguez" style="transform:rotate(270deg);">
+        <img src="images/ElderCCleaves.jpg" alt="ElderCCleaves" style="transform:rotate(270deg);">
     </section>
     <section>
-        <img src="images/ElderZWilliamson.jpg" alt="ElderZWilliamson">
-        <img src="images/ElderCAshton.jpg" alt="ElderCAshton">
-        <img src="images/ElderBHoffman.jpg" alt="ElderBHoffman">
+        <img src="images/ElderZWilliamson.jpg" alt="ElderZWilliamson" style="transform:rotate(270deg);">
+        <img src="images/ElderCAshton.jpg" alt="ElderCAshton" style="transform:rotate(270deg);">
+        <img src="images/ElderBHoffman.jpg" alt="ElderBHoffman" style="transform:rotate(270deg);">
     </section>
     <section>
-        <img src="images/ElderNOlsen.jpg" alt="ElderNOlsen">
-        <img src="images/ElderSBohn.jpg" alt="ElderSBohn">
-        <img src="images/ElderTLarson.jpg" alt="ElderTLarson">
+        <img src="images/ElderNOlsen.jpg" alt="ElderNOlsen" style="transform:rotate(90deg);">
+        <img src="images/ElderSBohn.jpg" alt="ElderSBohn" style="transform:rotate(270deg);">
+        <img src="images/ElderTLarson.jpg" alt="ElderTLarson" style="transform:rotate(270deg);">
     </section>
     <section>
-        <img src="images/ElderMStrong.jpg" alt="ElderMStrong">
-        <img src="images/ElderERoberts.jpg" alt="ElderERoberts">
-        <img src="images/ElderJRoberts.jpg" alt="ElderJRoberts">
+        <img src="images/ElderMStrong.jpg" alt="ElderMStrong" style="transform:rotate(90deg);">
+        <img src="images/ElderERoberts.jpg" alt="ElderERoberts" style="transform:rotate(90deg);">
+        <img src="images/ElderJRoberts.jpg" alt="ElderJRoberts" style="transform:rotate(270deg);">
     </section>
 
     <footer>
