--- a/baptisms.html
+++ b/baptisms.html
@@ -5,72 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Madrid South Mission</title>
   <link rel="stylesheet" href="styles.css" />
-
-  <style>
-    body {
-      font-family: 'Times New Roman', serif;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-      background-color: #0A4D68;
-      color: #F2E8CF;
-    }
-
-    .gallery {
-      width: 90%;
-      max-width: 1400px;
-      margin: 0 auto;
-      padding: 50px 20px;
-      background-color: #F2E8CF;
-      border-radius: 16px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
-    }
-
-    .gallery img {
-      width: 80%;
-      max-width: 5000px;
-      margin-bottom: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      border: 5px solid #D96C2B;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.02);
-      box-shadow: 0 0 20px #5DA9E9;
-    }
-
-    .row {
-      display: flex;
-      justify-content: center;
-      gap: 40px;
-      margin-bottom: 20px;
-      flex-wrap: wrap;
-    }
-
-    .row img {
-      width: 100%;
-      max-width: 45%;
-    }
-
-    .portrait-section {
-      margin-bottom: 200px;
-    }
-
-
-    nav a {
-      margin: 0 10px;
-      color: #F2E8CF;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      text-decoration: underline;
-    }
-
-  </style>
 </head>
 
 <body>
@@ -86,21 +20,23 @@
     </nav>
   </header>
 
-  <div class="gallery">
-    <div class="portrait-section">
-      <img src="images/Bap5.jpg" alt="Baptism 5">
-      <img src="images/Bap6.jpg" alt="Baptism 6">
-      <img src="images/Bap7.jpg" alt="Baptism 7">
-    </div>
+  <div class="baptisms-page">
+    <div class="gallery">
+      <div class="portrait-section">
+        <img src="images/Bap5.jpg" alt="Baptism 5">
+        <img src="images/Bap6.jpg" alt="Baptism 6">
+        <img src="images/Bap7.jpg" alt="Baptism 7">
+      </div>
 
-    <div class="row">
-      <img src="images/baptisms1.jpg" alt="Baptism 1">
-      <img src="images/baptism2.jpg" alt="Baptism 2">
-    </div>
+      <div class="row">
+        <img src="images/baptisms1.jpg" alt="Baptism 1">
+        <img src="images/baptism2.jpg" alt="Baptism 2">
+      </div>
 
-    <div class="row">
-      <img src="images/Bap3.jpg" alt="Baptism 3">
-      <img src="images/Bap4.jpg" alt="Baptism 4">
+      <div class="row">
+        <img src="images/Bap3.jpg" alt="Baptism 3">
+        <img src="images/Bap4.jpg" alt="Baptism 4">
+      </div>
     </div>
   </div>
 
