Added Companion Names and CSS Update

--- a/companions.html
+++ b/companions.html
@@ -19,35 +19,92 @@
             <a href="baptisms.html">Baptisms</a>
         </nav>
     </header>
-    <section>
-        <img src="images/ElderPJensen.jpg" alt="ElderPJensen">
-    </section>
-    <section>
-        <img src="images/ElderDLarkins.jpg" alt="ElderDLarkins">
-        <img src="images/ElderLWolfington.jpg" alt="ElderLWolfington" style="transform:rotate(180deg);">
-        <img src="images/ElderCBradshaw.jpg" alt="ElderCBradshaw">
-    </section>
-    <section>
-        <img src="images/ElderKWard.jpg" alt="ElderKWard" style="transform:rotate(270deg);">
-        <img src="images/ElderMDominguez.jpg" alt="ElderMDominguez" style="transform:rotate(270deg);">
-        <img src="images/ElderCCleaves.jpg" alt="ElderCCleaves" style="transform:rotate(270deg);">
-    </section>
-    <section>
-        <img src="images/ElderZWilliamson.jpg" alt="ElderZWilliamson" style="transform:rotate(270deg);">
-        <img src="images/ElderCAshton.jpg" alt="ElderCAshton" style="transform:rotate(270deg);">
-        <img src="images/ElderBHoffman.jpg" alt="ElderBHoffman" style="transform:rotate(270deg);">
-    </section>
-    <section>
-        <img src="images/ElderNOlsen.jpg" alt="ElderNOlsen" style="transform:rotate(90deg);">
-        <img src="images/ElderSBohn.jpg" alt="ElderSBohn" style="transform:rotate(270deg);">
-        <img src="images/ElderTLarson.jpg" alt="ElderTLarson" style="transform:rotate(270deg);">
-    </section>
-    <section>
-        <img src="images/ElderMStrong.jpg" alt="ElderMStrong" style="transform:rotate(90deg);">
-        <img src="images/ElderERoberts.jpg" alt="ElderERoberts" style="transform:rotate(90deg);">
-        <img src="images/ElderJRoberts.jpg" alt="ElderJRoberts" style="transform:rotate(270deg);">
-    </section>
-
+    <div class="companions-page">
+        <section>
+            <figure>
+                <img src="images/ElderPJensen.jpg" alt="ElderPJensen">
+                <p>Elder Jensen</p>
+            </figure>
+        </section>
+        <section>
+            <figure>
+                <img src="images/ElderDLarkins.jpg" alt="ElderDLarkins">
+                <p>Elder Larkins</p>
+            </figure>
+            <figure>
+                <img src="images/ElderLWolfington.jpg" alt="ElderLWolfington" style="transform:rotate(180deg);">
+                <p>Elder Wolfington</p>
+            </figure>
+            <figure>
+                <img src="images/ElderCBradshaw.jpg" alt="ElderCBradshaw">
+                <p>Elder Bradshaw</p>
+            </figure>
+        </section>
+        <div class="text-fix1">
+        <section>
+            <figure>
+                <img src="images/ElderKWard.jpg" alt="ElderKWard" style="transform:rotate(270deg);">
+                <p>Elder Ward</p>
+            </figure>
+            <figure>
+                <img src="images/ElderMDominguez.jpg" alt="ElderMDominguez" style="transform:rotate(270deg);">
+                <p>Elder Dominguez</p>
+            </figure>
+            <figure>
+                <img src="images/ElderCCleaves.jpg" alt="ElderCCleaves" style="transform:rotate(270deg);">
+                <p>Elder Cleaves</p>
+            </figure>
+        </section>
+        <section>
+            <figure>
+                <img src="images/ElderZWilliamson.jpg" alt="ElderZWilliamson" style="transform:rotate(270deg);">
+                <p>Elder Williamson</p>
+            </figure>
+            <figure>
+                <img src="images/ElderCAshton.jpg" alt="ElderCAshton" style="transform:rotate(270deg);">
+                <p>Elder Ashton</p>
+            </figure>
+            <figure>
+                <img src="images/ElderBHoffman.jpg" alt="ElderBHoffman" style="transform:rotate(270deg);">
+                <p>Elder Hoffman</p>
+            </figure>
+        </section>
+        <section>
+            <div class="text-fix2">
+            <figure>
+                <img src="images/ElderNOlsen.jpg" alt="ElderNOlsen" style="transform:rotate(90deg);">
+                <p>Elder Olsen</p>
+            </figure>
+            </div>
+            <figure>
+                <img src="images/ElderSBohn.jpg" alt="ElderSBohn" style="transform:rotate(270deg);">
+                <p>Elder Bohn</p>
+            </figure>
+            <figure>
+                <img src="images/ElderTLarson.jpg" alt="ElderTLarson" style="transform:rotate(270deg);">
+                <p>Elder Larson</p>
+            </figure>
+        </section>
+        <section>
+            <div class="text-fix2">
+            <figure>
+                <img src="images/ElderMStrong.jpg" alt="ElderMStrong" style="transform:rotate(90deg);">
+                <p>Elder Strong</p>
+            </figure>
+            </div>
+            <div class="text-fix2">
+            <figure>
+                <img src="images/ElderERoberts.jpg" alt="ElderERoberts" style="transform:rotate(90deg);">
+                <p>Elder Roberts E.</p>
+            </figure>
+            </div>
+            <figure>
+                <img src="images/ElderJRoberts.jpg" alt="ElderJRoberts" style="transform:rotate(270deg);">
+                <p>Elder Roberts J.</p>
+            </figure>
+        </section>
+        </div>
+    </div>
     <footer>
         <p>&copy; 2025 Parker Jensen | Madrid South Mission</p>
     </footer>
